lista de alunos concluida

--- a/pages/professor/alunos.html
+++ b/pages/professor/alunos.html
@@ -18,7 +18,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="/css/aluno/reset.css">
-    <link rel="stylesheet" href="/css/aluno/aluno.css">
+    <link rel="stylesheet" href="../../css/professor/aluno.css">
 
 
     <!-- COMPONENTS -->
@@ -47,7 +47,7 @@
             </div>
             <div class="tabelas_alunos">
                 <tbody id="tabelaAlunos" class="tabelaAlunos">
-                    <table width="100%" border="0" cellpadding="0" cellspacing="0" align="center">
+                    <table width="100%" border="0" cellpadding="0" cellspacing="0" align="center" class="table__alunos">
                         <tbody>
                             <tr>
                                 <th width="40%" align="left">
@@ -69,7 +69,7 @@
                             <tr>
                                 <td height="10" colspan="4"></td>
                             </tr>
-                            <tr id="listaAlunos">
+                            <tbody id="listaAlunos">
                                 <!-- <tr class="hover">
                                     <td class="tabela">
                                         Millena Ferreira de Sousa
@@ -83,19 +83,7 @@
                                 <tr>
                                     <td class="linha4" colspan="4"></td>
                                 </tr> -->
-                            </tr>
-                            
-
-
-                            <!-- <tr class="hover">
-                                <td class="tabela">Caroline Portela</td>
-                                <td class="tabela">carol.portela@senaisp.edu.br</td>
-                                <td align="center" class="tabela">24/08/2003</td>
-                                <td align="right" class="tabela">22282179</td>
-                            </tr>
-                            <tr>
-                                <td class="linha4" colspan="4"></td>
-                            </tr> -->
+                            </tbody>
                         </tbody>
                     </table>
                 </tbody>
