já está criando o valor

--- a/pages/professor/resultadodesejado.html
+++ b/pages/professor/resultadodesejado.html
@@ -53,31 +53,11 @@
                 <div class="linha"></div>
             </div>  
             <div id="container-desejado">
-                <table>
+                <table id="tabela">
                     <tr>
                         <th>RESULTADOS DESEJADOS</th>
-                        <th>MARGENS DE ERRO +</th>
-                        <th>MARGENS DE ERRO - </th>
-                    </tr>
-                    <tr class="resultadoDados">
-                        <td>Resultado 1</td>
-                        <td>Margem de Erro 1</td>
-                        <td>Margem de Erro 2</td>
-                    </tr>
-                    <tr class="resultadoDados">
-                        <td>Resultado 1</td>
-                        <td>Margem de Erro 1</td>
-                        <td>Margem de Erro 2</td>
-                    </tr>
-                    <tr class="resultadoDados">
-                        <td>Resultado 1</td>
-                        <td>Margem de Erro 1</td>
-                        <td>Margem de Erro 2</td>
-                    </tr>
-                    <tr class="resultadoDados">
-                        <td>Resultado 1</td>
-                        <td>Margem de Erro 1</td>
-                        <td>Margem de Erro 2</td>
+                        <th>MÍNIMO</th>
+                        <th>MÁXIMO</th>
                     </tr>
                 </table>
                 </div>
