link de criar tarefa adicionado

--- a/pages/professor/alunos.html
+++ b/pages/professor/alunos.html
@@ -41,6 +41,10 @@
 
     <main id="root_aluno">
         <div class="container container-areaAluno" id="container-areaAluno">
+            <a class="criarTarefa" href="../professor/tarefas.html">
+                <p>Criar tarefa</p>
+                <i class="fa-solid fa-arrow-right"></i>
+            </a>
             <div class="container_topo">
                 <p>ALUNOS</p>
                 <div class="linha"></div>
