--- a/pages/professor/resultadodesejado.html
+++ b/pages/professor/resultadodesejado.html
@@ -74,13 +74,26 @@
             </div>
             <div class="inputsTarefa d-flex flex-column">
                 <input type="number" placeholder="Digite o resultado desejado" id="desejado">
+                <!-- <input type="number" placeholder="Digite a margem de erro para mais" id="margemMais">
+                <input type="number" placeholder="Digite a margem de erro para menos" id="margemMenos"> -->
+                </div>
+                <button id="sendTarefa">Send</button>
+            </div>
+    <div id="modal__adicionar__margem" class="modal__adicionar__margem d-none">
+
+        <form id="adcTarefa2">
+            <button id="sair2">Sair</button>
+            <div class="titleForm d-flex font-family-Montserrat">
+                <h3>Adicione as margens de erro necessárias:</h3>
+            </div>
+            <div class="inputsTarefa d-flex flex-column">
                 <input type="number" placeholder="Digite a margem de erro para mais" id="margemMais">
                 <input type="number" placeholder="Digite a margem de erro para menos" id="margemMenos">
                 </div>
                 <button id="sendTarefa">Send</button>
+            </form>
             </div>
 
-        </form>
 
     </div>
 
