--- a/pages/professor/alunos.html
+++ b/pages/professor/alunos.html
@@ -18,7 +18,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="/css/aluno/reset.css">
-    <link rel="stylesheet" href="../../css/professor/aluno.css">
+    <link rel="stylesheet" href="../../css/professor/alunos.css">
 
 
     <!-- COMPONENTS -->
