--- a/pages/adm/turmas.html
+++ b/pages/adm/turmas.html
@@ -83,7 +83,7 @@
                 </div>
             </section>
 
-            <!-- MODAL ADICIONAR CURSOS -->
+            <!-- MODAL ADICIONAR TURMAS -->
             <div id="modal__adicionar" class="modal__adicionar">
                 <form class="modal__adicionar--content" id="modal__adicionar--content">
                     <p class="nome__modal">Adicionar uma Turma</p>
@@ -159,33 +159,78 @@
                 </form>
             </div>
 
-            <!-- MODAL EDITAR CURSOS -->
+            <!-- MODAL EDITAR TURMA -->
             <div id="modal__editar" class="modal__editar">
                 <form class="modal__editar--content" id="modal__editar--content">
-                    <p class="nome__modal">Editar um Curso</p>
-                    <div class="input__nome--valor">
-                        <label for="">Nome do Curso:</label>
-                        <input type="text" name="nome" id="myInputNomeValor" maxlength="100" style="width: 100%;"
-                            required>
+                    <p class="nome__modal">Editar um Turma</p>
+                    <div class="input__nome">
+                        <label for="">Nome:</label>
+                        <input type="text" name="nome" id="myInputNomeValor" maxlength="100" style="width: 100%;" required>
                     </div>
-                    <div class="sigla__carga--horaria">
-                        <div class="input__sigla--valor">
-                            <label for="">Sigla:</label>
-                            <input type="text" name="sigla" id="myInputSiglaValor" maxlength="5" required>
+                    <div class="data__inicio--data__conclusao">
+                        <div class="input__data--inicio">
+                            <label for="">Data Início:</label>
+                            <input type="date" name="data_inicio" id="myInputDataInicioValor" required>
                         </div>
-                        <div class="input__carga--horaria--valor">
-                            <label for="">Carga Horaria:</label>
-                            <input type="number" name="carga_horaria" id="myInputCargaHorariaValor" min="0" required>
+                        <div class="input__data--conclusao">
+                            <label for="">Data Conclusão:</label>
+                            <input type="date" name="data_conclusao" id="myInputDataConclusaoValor" required>
                         </div>
                     </div>
-                    <div class="input__descricao--valor">
-                        <label for="">Descrição do Curso:</label>
+                    <div class="input__descricao">
+                        <label for="">Descrição:</label>
                         <textarea tabindex="5" id="myInputDescricaoValor" required></textarea>
                     </div>
-
+                    <div class="input__radios" id="editarRadio">
+                        <label for="">Semestre:</label>
+                        <div class="radio">
+                            <input id="myRadioValor" name="mybuttons" type="radio" value="1" /> 
+                            <span>1</span>
+                        </div>
+                        <div class="radio">
+                            <input id="myRadioValor" name="mybuttons" type="radio" value="2" /> 
+                            <span>2</span>
+                        </div>
+                        <div class="radio">
+                            <input id="myRadioValor" name="mybuttons" type="radio" value="3" /> 
+                            <span>3</span>
+                        </div>
+                        <div class="radio">
+                            <input id="myRadioValor" name="mybuttons" type="radio" value="4" /> 
+                            <span>4</span>
+                        </div>
+                        <div class="radio">
+                            <input id="myRadioValor" name="mybuttons" type="radio" value="5" /> 
+                            <span>5</span>
+                        </div>
+                        <!-- <div class="dropdownCurso">
+                            <div class="adicionar--curso">
+                                <label for="materias_cursos">Esta turma é de qual curso?</label>
+                            </div>
+                            <select id="materias_cursos" name="cursos">
+                                <option value="desenvolvimentoDeSistemas">desenvolvimento de sistemas</option>
+                                <option value="redesDeComputadores">redes de computadores</option>
+                                <option value="eletroeletronica">eletroeletronica</option>
+                            </select>
+                            <div class="content--list">
+                                <ul class="list">
+                                  <li class="list__item">
+                                    <label class="label--checkbox">
+                                        <input type="checkbox" class="checkbox" checked>
+                                          Desenvolvimento de Sistemas
+                                    </label>
+                                  </li>
+                                </ul>
+                            </div>
+                        </div> -->
+                        <!-- <input name="mybuttons" type="radio" value="2" /> 2
+                        <input name="mybuttons" type="radio" value="3" /> 3
+                        <input name="mybuttons" type="radio" value="4" /> 4
+                        <input name="mybuttons" type="radio" value="5" /> 5 -->
+                    </div>
                     <div class="modal__editar--footer">
                         <a type="submit" id="editar">Salvar</a>
-                    </div>
+                      </div>
                     <a href="#" class="modal__editar--close">&times;</a>
                 </form>
             </div>
