criando margem de erro

--- a/pages/professor/resultadodesejado.html
+++ b/pages/professor/resultadodesejado.html
@@ -90,7 +90,7 @@
                 <input type="number" placeholder="Digite a margem de erro para mais" id="margemMais">
                 <input type="number" placeholder="Digite a margem de erro para menos" id="margemMenos">
                 </div>
-                <button id="sendTarefa">Send</button>
+                <button id="sendTarefa" class="editEnviar">Send</button>
             </form>
             </div>
 
