tela de alunos do professor semi finalizada

--- a/pages/professor/aluno.html
+++ b/pages/professor/aluno.html
@@ -72,12 +72,12 @@
 
         <section class="containerTarefasAluno">
             <div class="containerTarefasAluno__filtroTarefas">
-                <div>
-                    <div></div>
+                <div class="legenda">
+                    <div class="quadrado1"></div>
                     <span>Realizado</span>
                 </div>
-                <div>
-                    <div></div>
+                <div class="legenda">
+                    <div class="quadrado2"></div>
                     <span>Não Realizado</span>
                 </div>
             </div>
@@ -85,67 +85,67 @@
             <section class="containerTarefasAluno__listaTarefas">
 
                 <div class="listaTarefas__cardTarefas">
-                    <img class="cardTarefas__imagemTarefa" src="../../img/peca.png" alt="imagem da peça da tarefa do aluno">
-                    <span class="cardTarefas__nomeTarefa">
-                        TAREFA 1
-                    </span>
+                    <div class="cardTarefas">
+                        <img class="cardTarefas__imagemTarefa" src="../../img/peca.png" alt="imagem da peça da tarefa do aluno">
+                        <span class="cardTarefas__nomeTarefa">
+                            TAREFA 1
+                        </span>
+                    </div>
+                    <div class="bolinha"></div>
                 </div>
-                
-
                 <div class="listaTarefas__cardTarefas">
-                    <img class="cardTarefas__imagemTarefa" src="../../img/peca.png" alt="imagem da peça da tarefa do aluno">
-                    <span class="cardTarefas__nomeTarefa">
-                        TAREFA 1
-                    </span>
+                    <div class="cardTarefas">
+                        <img class="cardTarefas__imagemTarefa" src="../../img/peca.png" alt="imagem da peça da tarefa do aluno">
+                        <span class="cardTarefas__nomeTarefa">
+                            TAREFA 1
+                        </span>
+                    </div>
+                    <div class="bolinha"></div>
                 </div>
-
                 <div class="listaTarefas__cardTarefas">
-                    <img class="cardTarefas__imagemTarefa" src="../../img/peca.png" alt="imagem da peça da tarefa do aluno">
-                    <span class="cardTarefas__nomeTarefa">
-                        TAREFA 1
-                    </span>
+                    <div class="cardTarefas">
+                        <img class="cardTarefas__imagemTarefa" src="../../img/peca.png" alt="imagem da peça da tarefa do aluno">
+                        <span class="cardTarefas__nomeTarefa">
+                            TAREFA 1
+                        </span>
+                    </div>
+                    <div class="bolinha"></div>
                 </div>
-
                 <div class="listaTarefas__cardTarefas">
-                    <img class="cardTarefas__imagemTarefa" src="../../img/peca.png" alt="imagem da peça da tarefa do aluno">
-                    <span class="cardTarefas__nomeTarefa">
-                        TAREFA 1
-                    </span>
+                    <div class="cardTarefas">
+                        <img class="cardTarefas__imagemTarefa" src="../../img/peca.png" alt="imagem da peça da tarefa do aluno">
+                        <span class="cardTarefas__nomeTarefa">
+                            TAREFA 1
+                        </span>
+                    </div>
+                    <div class="bolinha"></div>
                 </div>
-
                 <div class="listaTarefas__cardTarefas">
-                    <img class="cardTarefas__imagemTarefa" src="../../img/peca.png" alt="imagem da peça da tarefa do aluno">
-                    <span class="cardTarefas__nomeTarefa">
-                        TAREFA 1
-                    </span>
+                    <div class="cardTarefas">
+                        <img class="cardTarefas__imagemTarefa" src="../../img/peca.png" alt="imagem da peça da tarefa do aluno">
+                        <span class="cardTarefas__nomeTarefa">
+                            TAREFA 1
+                        </span>
+                    </div>
+                    <div class="bolinha"></div>
                 </div>
-
                 <div class="listaTarefas__cardTarefas">
-                    <img class="cardTarefas__imagemTarefa" src="../../img/peca.png" alt="imagem da peça da tarefa do aluno">
-                    <span class="cardTarefas__nomeTarefa">
-                        TAREFA 1
-                    </span>
+                    <div class="cardTarefas">
+                        <img class="cardTarefas__imagemTarefa" src="../../img/peca.png" alt="imagem da peça da tarefa do aluno">
+                        <span class="cardTarefas__nomeTarefa">
+                            TAREFA 1
+                        </span>
+                    </div>
+                    <div class="bolinha"></div>
                 </div>
-
                 <div class="listaTarefas__cardTarefas">
-                    <img class="cardTarefas__imagemTarefa" src="../../img/peca.png" alt="imagem da peça da tarefa do aluno">
-                    <span class="cardTarefas__nomeTarefa">
-                        TAREFA 1
-                    </span>
-                </div>
-
-                <div class="listaTarefas__cardTarefas">
-                    <img class="cardTarefas__imagemTarefa" src="../../img/peca.png" alt="imagem da peça da tarefa do aluno">
-                    <span class="cardTarefas__nomeTarefa">
-                        TAREFA 1
-                    </span>
-                </div>
-
-                <div class="listaTarefas__cardTarefas">
-                    <img class="cardTarefas__imagemTarefa" src="../../img/peca.png" alt="imagem da peça da tarefa do aluno">
-                    <span class="cardTarefas__nomeTarefa">
-                        TAREFA 1
-                    </span>
+                    <div class="cardTarefas">
+                        <img class="cardTarefas__imagemTarefa" src="../../img/peca.png" alt="imagem da peça da tarefa do aluno">
+                        <span class="cardTarefas__nomeTarefa">
+                            TAREFA 1
+                        </span>
+                    </div>
+                    <div class="bolinha"></div>
                 </div>
 
             </section>
