tela de desejado e margem de erro quase pronta, falta responsivo

--- a/pages/professor/resultadodesejado.html
+++ b/pages/professor/resultadodesejado.html
@@ -55,7 +55,8 @@
             <div id="container-desejado">
                 <table id="tabela">
                     <tr>
-                        <th>RESULTADOS DESEJADOS</th>
+                        <th></th>
+                        <th>DESEJADO</th>
                         <th>MÍNIMO</th>
                         <th>MÁXIMO</th>
                     </tr>
