--- a/pages/professor/aluno.html
+++ b/pages/professor/aluno.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
     <script src="../../components/header.js"></script>
+    <script src="../../components/nav.js"></script>
     
     <link rel="stylesheet" href="../../css/reset.css">
     <link rel="stylesheet" href="../../css/professor/aluno.css">
@@ -20,14 +21,13 @@
     
     <header-padrao color_top="#3084B4" color_button="#DA251C" text_button="VOLTAR" link_button="../../index.html"></header-padrao>
 
-    <nav class="menuSuperior menuSuperior--displayFlex">
-        <a href="alunos.html">
-            <div class="ancoraAlunos">
-                <span>
-                    ALUNOS
-                </span>
-            </div>
-        </a>
+    <!-- NAV PRINCIPAL -->
+    <nav class="nav">
+        <ul class="busca">
+            <a href="#">
+                Aluno
+            </a>
+        </ul>
     </nav>
 
     <main>
