pegando daddos da descrição pela api

--- a/pages/aluno/relatorio.html
+++ b/pages/aluno/relatorio.html
@@ -118,9 +118,9 @@
                         </tr>
                       </thead>
                       <tbody>
-                        <tr>
-                          <td>Descrição 1</td>
-                          <td>Valor 1, Valor 2</td>
+                        <!-- <tr class="trContainer">
+                          <td class="descricao">Descrição 1</td>
+                          <td class="valores">Valor 1, Valor 2</td>
                           <td>
                             <input class="input input__obtido" type="text">
                           </td>
@@ -133,7 +133,7 @@
                           <td>
                             <input class="checkbox" type="checkbox">
                           </td>
-                        </tr>
+                        </tr> -->
                         <!-- Adicione mais linhas conforme necessário -->
                       </tbody>
                     </table>
