teste pro vercel

--- a/pages/professor/alunos.html
+++ b/pages/professor/alunos.html
@@ -17,7 +17,7 @@
     <script src="https://kit.fontawesome.com/30058942d9.js" crossorigin="anonymous"></script>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/css/aluno/reset.css">
+    <link rel="stylesheet" href="../../css/aluno/reset.css">
     <link rel="stylesheet" href="../../css/professor/alunos.css">
 
 
