tela await pronta

--- a/pages/aluno/await.html
+++ b/pages/aluno/await.html
@@ -17,11 +17,12 @@
 
     <script src="https://kit.fontawesome.com/94e8bd423f.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="/css_bianca/reset.css">
-    <link rel="stylesheet" href="/css_bianca/index.css/header.css">
-    <link rel="stylesheet" href="/css_bianca/index.css/style.css">
-    <link rel="stylesheet" href="/css_bianca/await.css/main.css">
-    <link rel="stylesheet" href="/css_bianca/await.css/media.css">
+    <link rel="stylesheet" href="/css/await.css/header.css">
+    <link rel="stylesheet" href="/css/await.css/media.css">
+    <link rel="stylesheet" href="/css/await.css/reset.css">
+    <link rel="stylesheet" href="/css/await.css/style.css">
+    <link rel="stylesheet" href="/css/await.css/main.css">
+
 
     <!-- COMPONENTS -->
     <script src="/components/header.js" defer type="module"></script>
