--- a/pages/aluno/relatorio.html
+++ b/pages/aluno/relatorio.html
@@ -137,8 +137,11 @@
                         <!-- Adicione mais linhas conforme necessário -->
                       </tbody>
                     </table>
+
+                   
             </div>
         </div>
+        <a href="./await.html" class="linkEnviar">Enviar</a>
     </main>
 </body>
 
