Terminando Api dos Alunos-Professores

--- a/pages/professor/aluno.html
+++ b/pages/professor/aluno.html
@@ -11,6 +11,8 @@
 
     <script src="../../components/header.js"></script>
     <script src="../../components/nav.js"></script>
+    <script src="../../js/aluno_professor.js" type="module" defer></script>
+
     
     <link rel="stylesheet" href="../../css/reset.css">
     <link rel="stylesheet" href="../../css/professor/aluno.css">
@@ -38,7 +40,7 @@
                 <label for="myInputNomeAlunoProfessor" class="labelNomeAluno">
                     Nome:
                 </label>
-                <input disabled type="text" name="nome" id="myInputNomeAlunoProfessor" class="myInputNomeAlunoProfessor" value="Marcelo">
+                <input disabled type="text" name="nome" id="myInputNomeAlunoProfessor" class="myInputNomeAlunoProfessor">
             </div>
 
             <div class="containerDadosAluno__emailAluno containerDadosAluno__emailAluno--displayFlex">
@@ -82,8 +84,8 @@
                 </div>
             </div>
 
-            <section class="containerTarefasAluno__listaTarefas">
-
+            <section id="containerTarefasAluno" class="containerTarefasAluno__listaTarefas">
+<!-- 
                 <div class="listaTarefas__cardTarefas">
                     <div class="cardTarefas">
                         <img class="cardTarefas__imagemTarefa" src="../../img/peca.png" alt="imagem da peça da tarefa do aluno">
@@ -92,61 +94,8 @@
                         </span>
                     </div>
                     <div class="bolinha"></div>
-                </div>
-                <div class="listaTarefas__cardTarefas">
-                    <div class="cardTarefas">
-                        <img class="cardTarefas__imagemTarefa" src="../../img/peca.png" alt="imagem da peça da tarefa do aluno">
-                        <span class="cardTarefas__nomeTarefa">
-                            TAREFA 1
-                        </span>
-                    </div>
-                    <div class="bolinha"></div>
-                </div>
-                <div class="listaTarefas__cardTarefas">
-                    <div class="cardTarefas">
-                        <img class="cardTarefas__imagemTarefa" src="../../img/peca.png" alt="imagem da peça da tarefa do aluno">
-                        <span class="cardTarefas__nomeTarefa">
-                            TAREFA 1
-                        </span>
-                    </div>
-                    <div class="bolinha"></div>
-                </div>
-                <div class="listaTarefas__cardTarefas">
-                    <div class="cardTarefas">
-                        <img class="cardTarefas__imagemTarefa" src="../../img/peca.png" alt="imagem da peça da tarefa do aluno">
-                        <span class="cardTarefas__nomeTarefa">
-                            TAREFA 1
-                        </span>
-                    </div>
-                    <div class="bolinha"></div>
-                </div>
-                <div class="listaTarefas__cardTarefas">
-                    <div class="cardTarefas">
-                        <img class="cardTarefas__imagemTarefa" src="../../img/peca.png" alt="imagem da peça da tarefa do aluno">
-                        <span class="cardTarefas__nomeTarefa">
-                            TAREFA 1
-                        </span>
-                    </div>
-                    <div class="bolinha"></div>
-                </div>
-                <div class="listaTarefas__cardTarefas">
-                    <div class="cardTarefas">
-                        <img class="cardTarefas__imagemTarefa" src="../../img/peca.png" alt="imagem da peça da tarefa do aluno">
-                        <span class="cardTarefas__nomeTarefa">
-                            TAREFA 1
-                        </span>
-                    </div>
-                    <div class="bolinha"></div>
-                </div>
-                <div class="listaTarefas__cardTarefas">
-                    <div class="cardTarefas">
-                        <img class="cardTarefas__imagemTarefa" src="../../img/peca.png" alt="imagem da peça da tarefa do aluno">
-                        <span class="cardTarefas__nomeTarefa">
-                            TAREFA 1
-                        </span>
-                    </div>
-                    <div class="bolinha"></div>
-                </div>
+                </div> -->
+                
 
             </section>
         </section>
