Linkando telas de editar do adm

--- a/pages/adm/administrador.html
+++ b/pages/adm/administrador.html
@@ -127,7 +127,7 @@
             </div>
 
             <!-- MODAL EDITAR CURSOS -->
-            <!-- <div id="modal__editar" class="modal__editar">
+             <div id="modal__editar" class="modal__editar">
                 <form class="modal__editar--content" id="modal__editar--content">
                     <p class="nome__modal">Editar um Curso</p>
                     <div class="input__nome--valor">
@@ -155,7 +155,7 @@
                     </div>
                     <a href="#" class="modal__editar--close">&times;</a>
                 </form>
-            </div> -->
+            </div>
 
             <!-- MODAL DELETAR CURSOS -->
             <!-- <div class="modal__deletar" id="modal__deletar">
